dashboard begining, login and register progression

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
   "extends": [
     "@antfu"
-  ]
+  ],
+  "rules": {
+    "no-console": process.env["NODE_ENV"] !== "production" ? "error" : "warn",
+    "no-debugger": process.env["NODE_ENV"] !== "production" ? "error" : "warn"
+}
 }
