--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "typecheck": "vue-tsc --noEmit"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.4.2",
+        "@heroicons/vue": "^1.0.5",
         "@vuelidate/core": "^2.0.0-alpha.30",
         "@vuelidate/validators": "^2.0.0-alpha.24",
         "@vueuse/core": "^6.5.3",
@@ -26,6 +28,7 @@
     "devDependencies": {
         "@antfu/eslint-config": "^0.9.0",
         "@iconify-json/carbon": "^1.0.4",
+        "@iconify-json/fa": "^1.0.1",
         "@intlify/vite-plugin-vue-i18n": "^2.4.0",
         "@types/markdown-it-link-attributes": "^3.0.1",
         "@types/nprogress": "^0.2.0",
